<resources>
    <string name="app_name">BAE</string>
    <string name="open_nav">Open Naviagation Drawer</string>
    <string name="close_nav">Close Naviagation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="loign_succeful">Đăng nhập thành công</string>
    <string name="loign_fail">Tài khoản này chưa được đăng kí</string>
    <string name="record">Record</string>
    <string name="short_view">Short View</string>
    <string name="more">More</string>
    <string name="client">Client</string>
    <string name="history">Lịch sử</string>
    <string name="choose_branch">Chọn loại</string>
    <string name="change_voucher">Đổi mã</string>
    <string name="figerAuthen_sucessful">Vân tay hợp lệ</string>
    <string name="figerAuthen_not_sucessful">Vân tay không hợp lệ</string>
    <string name="total">Tổng số</string>
    <string name="confirmed">Đã xác nhận</string>
    <string name="not_confirm">Chưa xác nhận</string>
    <string name="total_voucher">Tổng\nvoucher</string>
    <string name="remaining">Còn lại</string>
    <string name="changed">Đã đổi</string>
</resources>