<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Cart.CartFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">
        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_125sdp"
            android:background="@color/main_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_26sdp"
            android:layout_height="@dimen/_26sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:src="@drawable/round_manage_search_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textTitle"
            app:tint="@color/white" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/card_background"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"

            app:cardCornerRadius="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/view"

            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="13dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_14sdp"
                android:background="@color/background"
                >

                <TextView
                    android:id="@+id/te1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/short_view"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/te2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/more"
                    android:textColor="@color/main_color"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/layoutClients"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:gravity="center"
                    app:layout_constraintEnd_toStartOf="@id/layoutClients1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/te1"
                    >

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/_28sdp"
                        android:layout_height="@dimen/_28sdp"
                        android:src="@drawable/outline_photo_camera_24"
                        app:tint="@color/main_color" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:text="@string/client"
                        android:textColor="@color/secondary_text"
                        android:textSize="@dimen/_10ssp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="395"
                        android:textColor="@color/primary_text"
                        android:textSize="@dimen/_16ssp" />



                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutClients1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toStartOf="@id/layoutClients2"

                    app:layout_constraintStart_toEndOf="@id/layoutClients"
                    app:layout_constraintTop_toBottomOf="@id/te1">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/_28sdp"
                        android:layout_height="@dimen/_28sdp"
                        android:src="@drawable/outline_photo_camera_24"
                        app:tint="@color/main_color" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:text="@string/client"
                        android:textColor="@color/secondary_text"
                        android:textSize="@dimen/_10ssp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="395"
                        android:textColor="@color/primary_text"
                        android:textSize="@dimen/_16ssp" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutClients2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/layoutClients1"
                    app:layout_constraintTop_toBottomOf="@id/te1">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/_28sdp"
                        android:layout_height="@dimen/_28sdp"
                        android:src="@drawable/outline_photo_camera_24"
                        app:tint="@color/main_color" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:text="@string/client"
                        android:textColor="@color/secondary_text"
                        android:textSize="@dimen/_10ssp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="395"
                        android:textColor="@color/primary_text"
                        android:textSize="@dimen/_16ssp" />


                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:overScrollMode="never"
            android:padding="@dimen/_16sdp"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardHeader">

            <ListView
                android:id="@+id/listCart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>