<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Voucher.ChooseBranchActivity"
    android:background="@color/background">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".ui.Cart.CartFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_125sdp"
                android:background="@color/main_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textTitle_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginLeft="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/change_voucher"
                android:textColor="@color/white"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/finish_change"
                android:layout_width="@dimen/_26sdp"
                android:layout_height="@dimen/_26sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:src="@drawable/baseline_keyboard_arrow_left_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textTitle_change"
                app:tint="@color/white" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                app:cardBackgroundColor="@color/card_background"

                app:cardCornerRadius="@dimen/_10sdp"
                app:layout_constraintBottom_toBottomOf="@+id/view"
                app:layout_constraintTop_toBottomOf="@+id/view"

                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="13dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_14sdp"
                    android:background="@color/background"
                    >

                    <TextView
                        android:id="@+id/te1_change"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/short_view"
                        android:textColor="@color/primary_text"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/te2_change"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/more"
                        android:textColor="@color/main_color"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:id="@+id/layoutClients_change"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:gravity="center"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toStartOf="@id/layoutClients1_change"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/te1_change">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="@dimen/_28sdp"
                            android:layout_height="@dimen/_28sdp"
                            android:src="@drawable/outline_photo_camera_24"
                            app:tint="@color/main_color" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_4sdp"
                            android:text="@string/client"
                            android:textColor="@color/secondary_text"
                            android:textSize="@dimen/_10ssp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="395"
                            android:textColor="@color/primary_text"
                            android:textSize="@dimen/_16ssp" />


                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layoutClients1_change"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="50dp"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toStartOf="@id/layoutClients2_change"

                        app:layout_constraintStart_toEndOf="@id/layoutClients_change"
                        app:layout_constraintTop_toBottomOf="@id/te1_change">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="@dimen/_28sdp"
                            android:layout_height="@dimen/_28sdp"
                            android:src="@drawable/outline_photo_camera_24"
                            app:tint="@color/main_color" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_4sdp"
                            android:text="@string/client"
                            android:textColor="@color/secondary_text"
                            android:textSize="@dimen/_10ssp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="395"
                            android:textColor="@color/primary_text"
                            android:textSize="@dimen/_16ssp" />


                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layoutClients2_change"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="50dp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:gravity="center"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/layoutClients1_change"
                        app:layout_constraintTop_toBottomOf="@id/te1_change">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="@dimen/_28sdp"
                            android:layout_height="@dimen/_28sdp"
                            android:src="@drawable/outline_photo_camera_24"
                            app:tint="@color/main_color" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_4sdp"
                            android:text="@string/client"
                            android:textColor="@color/secondary_text"
                            android:textSize="@dimen/_10ssp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="395"
                            android:textColor="@color/primary_text"
                            android:textSize="@dimen/_16ssp" />


                    </LinearLayout>


                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:clipToPadding="false"
                android:overScrollMode="never"
                android:padding="@dimen/_16sdp"
                android:scrollbars="none"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardHeader">

                <ListView
                    android:id="@+id/listVoucher"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </FrameLayout>





</androidx.constraintlayout.widget.ConstraintLayout>
